# dagster-service

./: .env.example  .gitignore  Dockerfile.dagit  Dockerfile.dagster-daemon  README.md  dagster.yaml  docker-compose.repos.yaml.example  docker-compose.yaml  pyproject.toml  repos.py  requirements.txt  workspace.yaml
