[tool.poetry]
name = "dagster-service"
version = "0.1.0"
description = "My service template for dagster"
authors = ["Jerrylee Isaac Geronimo <jerryleegeronimo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.13.2"
dagster-docker = "^0.13.2"
dagster-postgres = "^0.13.2"
dagit = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
