[tool.poetry]
name = "dagster-service"
version = "0.1.0"
description = "My service template for dagster"
authors = ["Jerrylee Isaac Geronimo <jerryleegeronimo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.14.0"
dagster-docker = "^0.14.0"
dagster-postgres = "^0.14.0"
dagit = "^0.14.0"
grpcio = "1.32.0"
protobuf = "3.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
